# gustavolivraria

./: README.md  db.sqlite3  procfile  pyproject.toml
core/: models.py
core/migrations/: 0001_initial.py  0002_editora.py  0003_autor_livro.py
livraria/: settings.py  urls.py
